@@ -268,7 +268,7 @@ normalize-whitespace: 1
 
     Error in SLIF parse: No lexeme found at line 1, column 18
     * String before error: a = 8675309 + 42\s
-    * The error was at line 1, column 18, and at character 0x002a '*', ...
+    * The error was at line 1, column 18, and at character U+002a "*", ...
     * here: * 711
 
 =for Marpa::R3::Display::End
@@ -351,7 +351,7 @@ name: SLIF debug example trace output
 partial: 1
 normalize-whitespace: 1
 
-    Discarded lexeme L1c17: whitespace
+    Discarded lexeme B1L1c17: whitespace
 
 =for Marpa::R3::Display::End
 
@@ -392,19 +392,19 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    F0 @0-5 L1c1-16 statements -> statement * .
-    P1 @5-5 L1c17 statement -> . assignment
-    P2 @5-5 L1c17 statement -> . <numeric assignment>
-    F2 @0-5 L1c1-16 statement -> <numeric assignment> .
-    P3 @5-5 L1c17 assignment -> . 'set' variable 'to' expression
-    P4 @5-5 L1c17 <numeric assignment> -> . variable '=' expression
-    F4 @0-5 L1c1-16 <numeric assignment> -> variable '=' expression .
-    F5 @2-5 L1c5-16 expression -> expression .
-    F7 @4-5 L1c15-16 expression -> expression .
-    F8 @4-5 L1c15-16 expression -> variable .
-    R11:1 @2-5 L1c5-16 expression -> expression . '+' expression
-    F11 @2-5 L1c5-16 expression -> expression '+' expression .
-    F19 @0-5 L1c1-16 [:start] -> statements .
+    F0 @0-5 B1L1c1-16 statements -> statement * .
+    P1 @5-5 B1L1c17 statement -> . assignment
+    P2 @5-5 B1L1c17 statement -> . <numeric assignment>
+    F2 @0-5 B1L1c1-16 statement -> <numeric assignment> .
+    P3 @5-5 B1L1c17 assignment -> . 'set' variable 'to' expression
+    P4 @5-5 B1L1c17 <numeric assignment> -> . variable '=' expression
+    F4 @0-5 B1L1c1-16 <numeric assignment> -> variable '=' expression .
+    F5 @2-5 B1L1c5-16 expression -> expression .
+    F7 @4-5 B1L1c15-16 expression -> expression .
+    F8 @4-5 B1L1c15-16 expression -> variable .
+    R11:1 @2-5 B1L1c5-16 expression -> expression . '+' expression
+    F11 @2-5 B1L1c5-16 expression -> expression '+' expression .
+    F19 @0-5 B1L1c1-16 [:start] -> statements .
 
 =for Marpa::R3::Display::End
 
@@ -415,7 +415,7 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    F19 @0-5 L1c1-16 [:start] -> statements .
+    F19 @0-5 B1L1c1-16 [:start] -> statements .
 
 =for Marpa::R3::Display::End
 
@@ -424,7 +424,7 @@ each progress report line shows,
 in fully expanded form,
 the dotted rule we were working on.
 Prefixed to the dotted rule are three fields.
-In the example just above they are "C<F0 @0-5 L1c1-16>".
+In the example just above they are "C<F0 @0-5 B1L1c1-16>".
 The "C<F0>" says that this is a completed or B<final> rule,
 and that it is rule number 0.
 The rule number is a convenient way to refer to a rule
@@ -469,7 +469,7 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    R11:2 @2-4 L1c5-13 expression -> expression '+' . expression
+    R11:2 @2-4 B1L1c5-13 expression -> expression '+' . expression
 
 =for Marpa::R3::Display::End
 
@@ -489,7 +489,7 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    P2 @3-3 L1c13 statement -> . <numeric assignment>
+    P2 @3-3 B1L1c13 statement -> . <numeric assignment>
 
 =for Marpa::R3::Display::End
 
@@ -557,12 +557,12 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    P0 @0-0 L0c0 statements -> . statement *
-    P1 @0-0 L0c0 statement -> . assignment
-    P2 @0-0 L0c0 statement -> . <numeric assignment>
-    P3 @0-0 L0c0 assignment -> . 'set' variable 'to' expression
-    P4 @0-0 L0c0 <numeric assignment> -> . variable '=' expression
-    P19 @0-0 L0c0 [:start] -> . statements
+    P0 @0-0 B0L0c0 statements -> . statement *
+    P1 @0-0 B0L0c0 statement -> . assignment
+    P2 @0-0 B0L0c0 statement -> . <numeric assignment>
+    P3 @0-0 B0L0c0 assignment -> . 'set' variable 'to' expression
+    P4 @0-0 B0L0c0 <numeric assignment> -> . variable '=' expression
+    P19 @0-0 B0L0c0 [:start] -> . statements
 
 =for Marpa::R3::Display::End
 
@@ -589,7 +589,7 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    P10 @2-2 L1c5 expression -> . 'string' '(' <numeric expression> ')'
+    P10 @2-2 B1L1c5 expression -> . 'string' '(' <numeric expression> ')'
 
 =for Marpa::R3::Display::End
 
@@ -598,7 +598,7 @@ name: SLIF debug example progress report
 partial: 1
 normalize-whitespace: 1
 
-    P10 @4-4 L1c15 expression -> . 'string' '(' <numeric expression> ')'
+    P10 @4-4 B1L1c15 expression -> . 'string' '(' <numeric expression> ')'
 
 =for Marpa::R3::Display::End
 
@@ -724,7 +724,7 @@ name: SLIF Leo show_progress() example
 partial: 1
 normalize-whitespace: 1
 
-    F11 x12 @0...38-41 L1c1-L2c40 <plain assignment> -> 'x' '=' expression .
+    F11 x12 @0...38-41 B1L1c1-L2c40 <plain assignment> -> 'x' '=' expression .
 
 =for Marpa::R3::Display::End
 
@@ -733,7 +733,7 @@ name: SLIF Leo show_progress() example
 partial: 1
 normalize-whitespace: 1
 
-    F1 x20 @0...38-41 L1c1-L2c40 expression -> assignment .
+    F1 x20 @0...38-41 B1L1c1-L2c40 expression -> assignment .
 
 =for Marpa::R3::Display::End
 
@@ -742,7 +742,7 @@ name: SLIF Leo show_progress() example
 partial: 1
 normalize-whitespace: 1
 
-    F6 x12 @0...38-41 L1c1-L2c40 assignment -> <plain assignment> .
+    F6 x12 @0...38-41 B1L1c1-L2c40 assignment -> <plain assignment> .
 
 =for Marpa::R3::Display::End
 
@@ -779,7 +779,7 @@ range, with the earliest separated from the most recent
 by a "C<...>".
 For example, above,
 where the first four fields were
-"C<F7 x12 @0...38-41 L1c1-L2c40>",
+"C<F7 x12 @0...38-41 B1L1c1-L2c40>",
 that tells us
 that the dotted rule is rule 7, which has 12 instances.
 All 12 instances have their dot location at G1 location 41,
@@ -787,7 +787,7 @@ but their origins are in the range from G1 location 0
 to G1 location 38.
 
 The last field in
-"C<F7 x12 @0...38-41 L1c1-L2c40>" is an input string range.
+"C<F7 x12 @0...38-41 B1L1c1-L2c40>" is an input string range.
 "C<L1c1-L2c40>" says that
 input string positions visited by the
 the 12 instances start at line 1, column 1,
@@ -808,7 +808,7 @@ name: SLIF Leo show_progress() example
 partial: 1
 normalize-whitespace: 1
 
-    F2 x2 @8,18-41 L1c20-L2c40 assignment -> <divide assignment> .
+    F2 x2 @8,18-41 B1L1c20-L2c40 assignment -> <divide assignment> .
 
 =for Marpa::R3::Display::End
 
@@ -1006,7 +1006,7 @@ remove-blank-last-line: 1
 
     Error in SLIF parse: No lexeme found at line 1, column 18
     * String before error: a = 8675309 + 42\s
-    * The error was at line 1, column 18, and at character 0x002a '*', ...
+    * The error was at line 1, column 18, and at character U+002a "*", ...
     * here: * 711
 
 =for Marpa::R3::Display::End
@@ -1061,7 +1061,7 @@ remove-blank-last-line: 1
     Reading codepoint 0x0020 at line 1, column 2
     Codepoint 0x0020 rejected as [\s] at line 1, column 2
     Codepoint 0x0020 rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 2
-    Accepted lexeme L1c1 e1: variable; value="a"
+    Accepted lexeme B1L1c1 e1: variable; value="a"
     Restarted recognizer at line 1, column 2
     Reading codepoint 0x0020 at line 1, column 2
     Codepoint 0x0020 accepted as [\s] at line 1, column 2
@@ -1069,12 +1069,12 @@ remove-blank-last-line: 1
     Reading codepoint "=" 0x003d at line 1, column 3
     Codepoint "=" 0x003d rejected as [\=] at line 1, column 3
     Codepoint "=" 0x003d rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 3
-    Discarded lexeme L1c2: whitespace
+    Discarded lexeme B1L1c2: whitespace
     Restarted recognizer at line 1, column 3
     Reading codepoint "=" 0x003d at line 1, column 3
     Codepoint "=" 0x003d accepted as [\=] at line 1, column 3
     Codepoint "=" 0x003d rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 3
-    Accepted lexeme L1c3 e2: '='; value="="
+    Accepted lexeme B1L1c3 e2: '='; value="="
     Restarted recognizer at line 1, column 4
     Reading codepoint 0x0020 at line 1, column 4
     Codepoint 0x0020 accepted as [\s] at line 1, column 4
@@ -1083,7 +1083,7 @@ remove-blank-last-line: 1
     Codepoint "8" 0x0038 rejected as [\d] at line 1, column 5
     Codepoint "8" 0x0038 rejected as [\w] at line 1, column 5
     Codepoint "8" 0x0038 rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 5
-    Discarded lexeme L1c4: whitespace
+    Discarded lexeme B1L1c4: whitespace
     Restarted recognizer at line 1, column 5
     Reading codepoint "8" 0x0038 at line 1, column 5
     Codepoint "8" 0x0038 rejected as [\d] at line 1, column 5
@@ -1116,7 +1116,7 @@ remove-blank-last-line: 1
     Reading codepoint 0x0020 at line 1, column 12
     Codepoint 0x0020 rejected as [\s] at line 1, column 12
     Codepoint 0x0020 rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 12
-    Accepted lexeme L1c5-11 e3: variable; value="8675309"
+    Accepted lexeme B1L1c5-11 e3: variable; value="8675309"
     Restarted recognizer at line 1, column 12
     Reading codepoint 0x0020 at line 1, column 12
     Codepoint 0x0020 accepted as [\s] at line 1, column 12
@@ -1124,12 +1124,12 @@ remove-blank-last-line: 1
     Reading codepoint "+" 0x002b at line 1, column 13
     Codepoint "+" 0x002b rejected as [\+] at line 1, column 13
     Codepoint "+" 0x002b rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 13
-    Discarded lexeme L1c12: whitespace
+    Discarded lexeme B1L1c12: whitespace
     Restarted recognizer at line 1, column 13
     Reading codepoint "+" 0x002b at line 1, column 13
     Codepoint "+" 0x002b accepted as [\+] at line 1, column 13
     Codepoint "+" 0x002b rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 13
-    Accepted lexeme L1c13 e4: '+'; value="+"
+    Accepted lexeme B1L1c13 e4: '+'; value="+"
     Restarted recognizer at line 1, column 14
     Reading codepoint 0x0020 at line 1, column 14
     Codepoint 0x0020 accepted as [\s] at line 1, column 14
@@ -1138,7 +1138,7 @@ remove-blank-last-line: 1
     Codepoint "4" 0x0034 rejected as [\d] at line 1, column 15
     Codepoint "4" 0x0034 rejected as [\w] at line 1, column 15
     Codepoint "4" 0x0034 rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 15
-    Discarded lexeme L1c14: whitespace
+    Discarded lexeme B1L1c14: whitespace
     Restarted recognizer at line 1, column 15
     Reading codepoint "4" 0x0034 at line 1, column 15
     Codepoint "4" 0x0034 rejected as [\d] at line 1, column 15
@@ -1151,7 +1151,7 @@ remove-blank-last-line: 1
     Reading codepoint 0x0020 at line 1, column 17
     Codepoint 0x0020 rejected as [\s] at line 1, column 17
     Codepoint 0x0020 rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 17
-    Accepted lexeme L1c15-16 e5: variable; value="42"
+    Accepted lexeme B1L1c15-16 e5: variable; value="42"
     Restarted recognizer at line 1, column 17
     Reading codepoint 0x0020 at line 1, column 17
     Codepoint 0x0020 accepted as [\s] at line 1, column 17
@@ -1159,7 +1159,7 @@ remove-blank-last-line: 1
     Reading codepoint "*" 0x002a at line 1, column 18
     Codepoint "*" 0x002a rejected as [\*] at line 1, column 18
     Codepoint "*" 0x002a rejected as [^'\x{0A}\x{0B}\x{0C}\x{0D}\x{0085}\x{2028}\x{2029}] at line 1, column 18
-    Discarded lexeme L1c17: whitespace
+    Discarded lexeme B1L1c17: whitespace
     Restarted recognizer at line 1, column 18
     Reading codepoint "*" 0x002a at line 1, column 18
     Codepoint "*" 0x002a rejected as [\*] at line 1, column 18
@@ -1174,52 +1174,52 @@ name: SLIF debug example progress report
 remove-display-indent: 1
 remove-blank-last-line: 1
 
-    P0 @0-0 L0c0 statements -> . statement *
-    P1 @0-0 L0c0 statement -> . assignment
-    P2 @0-0 L0c0 statement -> . <numeric assignment>
-    P3 @0-0 L0c0 assignment -> . 'set' variable 'to' expression
-    P4 @0-0 L0c0 <numeric assignment> -> . variable '=' expression
-    P19 @0-0 L0c0 [:start] -> . statements
-    R4:1 @0-1 L1c1 <numeric assignment> -> variable . '=' expression
-    R4:2 @0-2 L1c1-3 <numeric assignment> -> variable '=' . expression
-    P5 @2-2 L1c5 expression -> . expression
-    P6 @2-2 L1c5 expression -> . expression
-    P7 @2-2 L1c5 expression -> . expression
-    P8 @2-2 L1c5 expression -> . variable
-    P9 @2-2 L1c5 expression -> . string
-    P10 @2-2 L1c5 expression -> . 'string' '(' <numeric expression> ')'
-    P11 @2-2 L1c5 expression -> . expression '+' expression
-    F0 @0-3 L1c1-11 statements -> statement * .
-    P1 @3-3 L1c13 statement -> . assignment
-    P2 @3-3 L1c13 statement -> . <numeric assignment>
-    F2 @0-3 L1c1-11 statement -> <numeric assignment> .
-    P3 @3-3 L1c13 assignment -> . 'set' variable 'to' expression
-    P4 @3-3 L1c13 <numeric assignment> -> . variable '=' expression
-    F4 @0-3 L1c1-11 <numeric assignment> -> variable '=' expression .
-    F5 @2-3 L1c5-11 expression -> expression .
-    F6 @2-3 L1c5-11 expression -> expression .
-    F7 @2-3 L1c5-11 expression -> expression .
-    F8 @2-3 L1c5-11 expression -> variable .
-    R11:1 @2-3 L1c5-11 expression -> expression . '+' expression
-    F19 @0-3 L1c1-11 [:start] -> statements .
-    P7 @4-4 L1c15 expression -> . expression
-    P8 @4-4 L1c15 expression -> . variable
-    P9 @4-4 L1c15 expression -> . string
-    P10 @4-4 L1c15 expression -> . 'string' '(' <numeric expression> ')'
-    R11:2 @2-4 L1c5-13 expression -> expression '+' . expression
-    F0 @0-5 L1c1-16 statements -> statement * .
-    P1 @5-5 L1c17 statement -> . assignment
-    P2 @5-5 L1c17 statement -> . <numeric assignment>
-    F2 @0-5 L1c1-16 statement -> <numeric assignment> .
-    P3 @5-5 L1c17 assignment -> . 'set' variable 'to' expression
-    P4 @5-5 L1c17 <numeric assignment> -> . variable '=' expression
-    F4 @0-5 L1c1-16 <numeric assignment> -> variable '=' expression .
-    F5 @2-5 L1c5-16 expression -> expression .
-    F7 @4-5 L1c15-16 expression -> expression .
-    F8 @4-5 L1c15-16 expression -> variable .
-    R11:1 @2-5 L1c5-16 expression -> expression . '+' expression
-    F11 @2-5 L1c5-16 expression -> expression '+' expression .
-    F19 @0-5 L1c1-16 [:start] -> statements .
+    P0 @0-0 B0L0c0 statements -> . statement *
+    P1 @0-0 B0L0c0 statement -> . assignment
+    P2 @0-0 B0L0c0 statement -> . <numeric assignment>
+    P3 @0-0 B0L0c0 assignment -> . 'set' variable 'to' expression
+    P4 @0-0 B0L0c0 <numeric assignment> -> . variable '=' expression
+    P19 @0-0 B0L0c0 [:start] -> . statements
+    R4:1 @0-1 B1L1c1 <numeric assignment> -> variable . '=' expression
+    R4:2 @0-2 B1L1c1-3 <numeric assignment> -> variable '=' . expression
+    P5 @2-2 B1L1c5 expression -> . expression
+    P6 @2-2 B1L1c5 expression -> . expression
+    P7 @2-2 B1L1c5 expression -> . expression
+    P8 @2-2 B1L1c5 expression -> . variable
+    P9 @2-2 B1L1c5 expression -> . string
+    P10 @2-2 B1L1c5 expression -> . 'string' '(' <numeric expression> ')'
+    P11 @2-2 B1L1c5 expression -> . expression '+' expression
+    F0 @0-3 B1L1c1-11 statements -> statement * .
+    P1 @3-3 B1L1c13 statement -> . assignment
+    P2 @3-3 B1L1c13 statement -> . <numeric assignment>
+    F2 @0-3 B1L1c1-11 statement -> <numeric assignment> .
+    P3 @3-3 B1L1c13 assignment -> . 'set' variable 'to' expression
+    P4 @3-3 B1L1c13 <numeric assignment> -> . variable '=' expression
+    F4 @0-3 B1L1c1-11 <numeric assignment> -> variable '=' expression .
+    F5 @2-3 B1L1c5-11 expression -> expression .
+    F6 @2-3 B1L1c5-11 expression -> expression .
+    F7 @2-3 B1L1c5-11 expression -> expression .
+    F8 @2-3 B1L1c5-11 expression -> variable .
+    R11:1 @2-3 B1L1c5-11 expression -> expression . '+' expression
+    F19 @0-3 B1L1c1-11 [:start] -> statements .
+    P7 @4-4 B1L1c15 expression -> . expression
+    P8 @4-4 B1L1c15 expression -> . variable
+    P9 @4-4 B1L1c15 expression -> . string
+    P10 @4-4 B1L1c15 expression -> . 'string' '(' <numeric expression> ')'
+    R11:2 @2-4 B1L1c5-13 expression -> expression '+' . expression
+    F0 @0-5 B1L1c1-16 statements -> statement * .
+    P1 @5-5 B1L1c17 statement -> . assignment
+    P2 @5-5 B1L1c17 statement -> . <numeric assignment>
+    F2 @0-5 B1L1c1-16 statement -> <numeric assignment> .
+    P3 @5-5 B1L1c17 assignment -> . 'set' variable 'to' expression
+    P4 @5-5 B1L1c17 <numeric assignment> -> . variable '=' expression
+    F4 @0-5 B1L1c1-16 <numeric assignment> -> variable '=' expression .
+    F5 @2-5 B1L1c5-16 expression -> expression .
+    F7 @4-5 B1L1c15-16 expression -> expression .
+    F8 @4-5 B1L1c15-16 expression -> variable .
+    R11:1 @2-5 B1L1c5-16 expression -> expression . '+' expression
+    F11 @2-5 B1L1c5-16 expression -> expression '+' expression .
+    F19 @0-5 B1L1c1-16 [:start] -> statements .
 
 =for Marpa::R3::Display::End
 
